--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "maple_app",
-  "homepage": "https://oplidote.github.io/maple_app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -17,7 +16,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -36,5 +37,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
+  },
+  "proxy": "http://localhost:3000/"
 }
